# notion_df

./: .gitignore  Makefile  README.md  app.py  editor_test.py  helpers.py  main.py  manual.py  once_in_a_month.py  pyproject.toml  query_test.py  requirements.txt  run_app.py  run_workflow.py  stopwatch.py  terminal.py  terminal_2.py  terminal_debug.py  terminal_main.py  terminal_manual.py  terminal_monthly.py  terminal_test.py  terminal_wait.py  test.py
_scratch/: icon.py  serialization.py  tagged_union.py
app/: __init__.py  emoji_code.py  my_block.py
applications/: auto_edit_relations.py  match_relations.py
console/: database_query.py  database_retrieve.py
consoles/: database_query.py
db_handler/: abstract_structures.py  decorate.py  decorate__abstract.py  decorate__frame.py  decorator.py  edit.py  handler_base.py  parser.py  patch_handler.py  query.py  query__filter__frame.py  query__filter_base.py  query__filter_handler.py  query__sort_base.py  query_handler.py  query_handler__filter_maker.py  query_requestor.py  write__page_base.py  write_handler.py  write_requestor.py  write_requestor__base.py
db_query/: filter_maker.py  maker.py  sorts_maker.py
db_reader/: parser.py  query_handler.py  query_handler__filter.py
examples/: test_blocklist.py  test_query.py
interface/: client_wrap.py  test_blocklist.py  test_query.py
notion_df/: console.py  constant.py  contents.py  core.py  data.py  entity.py  file.py  filter.py  misc.py  property.py  property_type.py  rich_text.py  sort.py  user.py  variable.py  variables.py
others/: abc_test.py  find_duplicate.py
read_db/: query_maker.py  query_maker_filter.py  query_maker_sorts.py
script/: profile.ps1
scripts/: profile.ps1
test/: __init__.py
(+1394 files in other folders)
